--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "private": true,
   "name": "nehal",
-  "homepage": "https://github.com/nehal119",
+  "homepage": "https://nehal119.github.io/portfolio",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "clean" : "gh-pages-clean"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -18,7 +19,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^3.1.0",
     "graphql": "^14.5.8",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
