--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
   "name": "nehal",
-  "homepage": "https://nehal119.github.io/",
+  "homepage": "https://nehal119.github.io/portfolio",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
+    "clean": "gh-pages-clean",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test",
-    "clean" : "gh-pages-clean"
+    "test": "react-scripts test"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
