--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
-  "name": "nehal",
-  "homepage": "https://nehal119.github.io/portfolio",
+  "name": "portfolio",
+  "homepage": ".",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
     "clean": "gh-pages-clean",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test"
