--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,1 +1,128 @@
-{"data":[{"id":"MDEwOlJlcG9zaXRvcnkyMjY1NjU4NDE=","name":"F1","createdAt":"2019-12-07T19:32:31Z","url":"https://github.com/nehal119/F1","description":"Live: https://f-1.netlify.com","isFork":false,"languages":[{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"CSS","iconifyClass":"logos-css-3"}]}]}
+{
+  "data": [
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyMjY1NjU4NDE=",
+      "name": "F1",
+      "createdAt": "2019-12-07T19:32:31Z",
+      "url": "https://github.com/nehal119/F1",
+      "description": "Live: https://f-1.netlify.com",
+      "isFork": false,
+      "languages": [
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        }
+      ]
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyODQ4NzEyMTI=",
+      "name": "portfolio",
+      "createdAt": "2020-08-04T03:50:38Z",
+      "url": "https://github.com/nehal119/portfolio",
+      "description": "Live preview available",
+      "isFork": false,
+      "languages": [
+        {
+          "name": "JavaScript",
+          "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        }
+      ]
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyMTI3ODE2MTY=",
+      "name": "material-dashboard-react",
+      "createdAt": "2019-10-04T09:39:57Z",
+      "url": "https://github.com/nehal119/material-dashboard-react",
+      "description": "React version of Material Dashboard by Creative Tim",
+      "isFork": true,
+      "languages": [
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "JavaScript",
+          "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        }
+      ]
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyMTAxMzA1ODc=",
+      "name": "mern-exercise-tracker-mongodb",
+      "createdAt": "2019-09-22T10:43:49Z",
+      "url": "https://github.com/nehal119/mern-exercise-tracker-mongodb",
+      "description": "MERN exercise tracker - code for tutorial",
+      "isFork": true,
+      "languages": [
+        {
+          "name": "JavaScript",
+          "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        }
+      ]
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyMzMzOTMzNTg=",
+      "name": "portfolio-node",
+      "createdAt": "2020-01-12T13:02:25Z",
+      "url": "https://github.com/nehal119/portfolio-node",
+      "description": null,
+      "isFork": false,
+      "languages": [
+        {
+          "name": "JavaScript",
+          "iconifyClass": "logos-javascript"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        },
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        }
+      ]
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkyODE2NjEyNDg=",
+      "name": "react-range-slider",
+      "createdAt": "2020-07-22T11:40:00Z",
+      "url": "https://github.com/nehal119/react-range-slider",
+      "description": null,
+      "isFork": false,
+      "languages": [
+        {
+          "name": "HTML",
+          "iconifyClass": "logos-html-5"
+        },
+        {
+          "name": "CSS",
+          "iconifyClass": "logos-css-3"
+        }
+      ]
+    }
+  ]
+}
